--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <img src="carsbgnd.PNG" id="bg" alt="Cars background">
+    <a href="https://jchristensen3.github.io/Princess-Matching-Game/"><img src="princesslink.PNG" class="carsGame" alt="facebook page" ></a>
     <h1>Cars Matching Game</h1>
     <div class="container">
         <div class="data">
