--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <img src="carsbgnd.PNG" id="bg" alt="Cars background">
+    <img src="deck.PNG" id="bg" alt="Cars background">
     <a href="https://jchristensen3.github.io/Princess-Matching-Game/"><img src="princesslink.PNG" class="carsGame" alt="facebook page" ></a>
     <h1>Cars Matching Game</h1>
     <div class="container">
